# serializer version: 1
# name: test_binary_sensor_empty[zoe_40][binary_sensor.reg_zoe_40_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1zoe40vin_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_empty[zoe_40][binary_sensor.reg_zoe_40_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'REG-ZOE-40 Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor_empty[zoe_40][binary_sensor.reg_zoe_40_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HVAC',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hvac_status',
    'unique_id': 'vf1zoe40vin_hvac_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_empty[zoe_40][binary_sensor.reg_zoe_40_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 HVAC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor_empty[zoe_40][binary_sensor.reg_zoe_40_plug-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_plug',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PLUG: 'plug'>,
    'original_icon': None,
    'original_name': 'Plug',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1zoe40vin_plugged_in',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_empty[zoe_40][binary_sensor.reg_zoe_40_plug-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'REG-ZOE-40 Plug',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_plug',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor_errors[zoe_40][binary_sensor.reg_zoe_40_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1zoe40vin_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_errors[zoe_40][binary_sensor.reg_zoe_40_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'REG-ZOE-40 Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensor_errors[zoe_40][binary_sensor.reg_zoe_40_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HVAC',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hvac_status',
    'unique_id': 'vf1zoe40vin_hvac_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_errors[zoe_40][binary_sensor.reg_zoe_40_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 HVAC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensor_errors[zoe_40][binary_sensor.reg_zoe_40_plug-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_plug',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PLUG: 'plug'>,
    'original_icon': None,
    'original_name': 'Plug',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1zoe40vin_plugged_in',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_errors[zoe_40][binary_sensor.reg_zoe_40_plug-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'REG-ZOE-40 Plug',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_plug',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensors[captur_fuel][binary_sensor.reg_captur_fuel_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_captur_fuel_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HVAC',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hvac_status',
    'unique_id': 'vf1capturfuelvin_hvac_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[captur_fuel][binary_sensor.reg_captur_fuel_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR-FUEL HVAC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_captur_fuel_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensors[captur_phev][binary_sensor.reg_captur_phev_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_captur_phev_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1capturphevvin_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[captur_phev][binary_sensor.reg_captur_phev_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'REG-CAPTUR_PHEV Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_captur_phev_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[captur_phev][binary_sensor.reg_captur_phev_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_captur_phev_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HVAC',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hvac_status',
    'unique_id': 'vf1capturphevvin_hvac_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[captur_phev][binary_sensor.reg_captur_phev_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR_PHEV HVAC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_captur_phev_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensors[captur_phev][binary_sensor.reg_captur_phev_plug-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_captur_phev_plug',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PLUG: 'plug'>,
    'original_icon': None,
    'original_name': 'Plug',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1capturphevvin_plugged_in',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[captur_phev][binary_sensor.reg_captur_phev_plug-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'REG-CAPTUR_PHEV Plug',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_captur_phev_plug',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[twingo_3_electric][binary_sensor.reg_twingo_iii_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_twingo_iii_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1twingoiiivin_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[twingo_3_electric][binary_sensor.reg_twingo_iii_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'REG-TWINGO-III Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_twingo_iii_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[twingo_3_electric][binary_sensor.reg_twingo_iii_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_twingo_iii_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HVAC',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hvac_status',
    'unique_id': 'vf1twingoiiivin_hvac_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[twingo_3_electric][binary_sensor.reg_twingo_iii_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-TWINGO-III HVAC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_twingo_iii_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[twingo_3_electric][binary_sensor.reg_twingo_iii_plug-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_twingo_iii_plug',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PLUG: 'plug'>,
    'original_icon': None,
    'original_name': 'Plug',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1twingoiiivin_plugged_in',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[twingo_3_electric][binary_sensor.reg_twingo_iii_plug-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'REG-TWINGO-III Plug',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_twingo_iii_plug',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[zoe_40][binary_sensor.reg_zoe_40_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1zoe40vin_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[zoe_40][binary_sensor.reg_zoe_40_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'REG-ZOE-40 Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[zoe_40][binary_sensor.reg_zoe_40_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HVAC',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hvac_status',
    'unique_id': 'vf1zoe40vin_hvac_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[zoe_40][binary_sensor.reg_zoe_40_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 HVAC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[zoe_40][binary_sensor.reg_zoe_40_plug-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_40_plug',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PLUG: 'plug'>,
    'original_icon': None,
    'original_name': 'Plug',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1zoe40vin_plugged_in',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[zoe_40][binary_sensor.reg_zoe_40_plug-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'REG-ZOE-40 Plug',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_40_plug',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[zoe_50][binary_sensor.reg_zoe_50_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_50_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1zoe50vin_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[zoe_50][binary_sensor.reg_zoe_50_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'REG-ZOE-50 Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_50_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[zoe_50][binary_sensor.reg_zoe_50_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_50_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HVAC',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hvac_status',
    'unique_id': 'vf1zoe50vin_hvac_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[zoe_50][binary_sensor.reg_zoe_50_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-50 HVAC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_50_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[zoe_50][binary_sensor.reg_zoe_50_plug-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.reg_zoe_50_plug',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PLUG: 'plug'>,
    'original_icon': None,
    'original_name': 'Plug',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'vf1zoe50vin_plugged_in',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[zoe_50][binary_sensor.reg_zoe_50_plug-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'REG-ZOE-50 Plug',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.reg_zoe_50_plug',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
